Add deductions page

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
       <?!= include('views/partials/dashboard'); ?>
       <?!= include('views/partials/contracts'); ?>
       <?!= include('views/partials/hourtypes'); ?>
+      <?!= include('views/partials/deductions'); ?>
       <?!= include('views/partials/settings'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
