--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -111,7 +111,8 @@
       <div class="ts-income-row"><span class="ts-income-row-label">Gross income</span><span class="ts-income-row-value" id="income-gross">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Superannuation guarantee</span><span class="ts-income-row-value" id="income-super-guarantee">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Extra super contributions</span><span class="ts-income-row-value" id="income-extra-super">--</span></div>
-      <div class="ts-income-row"><span class="ts-income-row-label">Other deductions</span><span class="ts-income-row-value" id="income-other-deductions">--</span></div>
+      <div class="ts-income-row"><span class="ts-income-row-label">Pre-tax deductions</span><span class="ts-income-row-value" id="income-other-deductions">--</span></div>
+      <div class="ts-income-row" id="income-super-lost-row" style="display:none;"><span class="ts-income-row-label">Super lost due to deductions</span><span class="ts-income-row-value" id="income-super-lost">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Taxable income</span><span class="ts-income-row-value" id="income-taxable">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Tax</span><span class="ts-income-row-value" id="income-tax">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Net income</span><span class="ts-income-row-value" id="income-net">--</span></div>
