Add first round of BAS reporting
Still need to be able to click a row to show its report

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
       <?!= include('views/partials/contracts'); ?>
       <?!= include('views/partials/hourtypes'); ?>
       <?!= include('views/partials/deductions'); ?>
+      <?!= include('views/partials/bas'); ?>
       <?!= include('views/partials/settings'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
