--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -107,7 +107,9 @@
       <div id="hour-types-breakdown-list"></div>
     </div>
     <div class="ts-income-breakdown" id="income-breakdown" hidden>
-      <div class="ts-income-row"><span class="ts-income-row-label">Total package</span><span class="ts-income-row-value" id="income-total-package">--</span></div>
+      <div class="ts-income-row" id="income-invoice-total-row" style="display:none;"><span class="ts-income-row-label">Invoice total</span><span class="ts-income-row-value" id="income-invoice-total">--</span></div>
+      <div class="ts-income-row" id="income-company-income-row" style="display:none;"><span class="ts-income-row-label">Company income</span><span class="ts-income-row-value" id="income-company-income">--</span></div>
+      <div class="ts-income-row" id="income-company-expenses-row" style="display:none;"><span class="ts-income-row-label">Company expenses</span><span class="ts-income-row-value" id="income-company-expenses">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Gross income</span><span class="ts-income-row-value" id="income-gross">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Superannuation guarantee</span><span class="ts-income-row-value" id="income-super-guarantee">--</span></div>
       <div class="ts-income-row"><span class="ts-income-row-label">Extra super contributions</span><span class="ts-income-row-value" id="income-extra-super">--</span></div>
