--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -10,6 +10,7 @@
       <div class="ts-nav-menu" id="nav-menu" hidden>
         <button class="ghost" id="nav-time">Time Entry</button>
         <button class="ghost" id="nav-deductions">Deductions</button>
+        <button class="ghost" id="nav-bas" style="display:none;">BAS Reporting</button>
         <button class="ghost" id="nav-contracts">Contracts</button>
         <button class="ghost" id="nav-hour-types" style="display:none;">Hour Types</button>
         <button class="ghost" id="nav-settings">Settings</button>
