Fix BAS report table width

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="ts-body ts-theme-dark">
     <?!= include('views/partials/navbar'); ?>
-    <main class="ts-container">
+    <main class="ts-container ts-container--fluid">
       <?!= include('views/partials/dashboard'); ?>
       <?!= include('views/partials/contracts'); ?>
       <?!= include('views/partials/hourtypes'); ?>
